--- a/src/assets/css/turnkey-styles.css
+++ b/src/assets/css/turnkey-styles.css
@@ -23,6 +23,11 @@ html,body {
   border-color: #00529B;
   border-radius: 0;
   color: #fff;
+  margin-right: 5px;
+}
+
+.btn-outline-secondary {
+  border-radius: 0;
 }
 
 .btn-link, a {
