--- a/src/app/shared/components/dynamic-chart/dynamic-chart.component.html
+++ b/src/app/shared/components/dynamic-chart/dynamic-chart.component.html
@@ -1,13 +1,18 @@
 <div class="card">
   <div class="card-body">
     <div class="row">
-      <p class="text-primary">
+      <!--<p class="text-primary">
         Total Individual Premium <br>
         <span class="fs-5">KSH 20,000</span>
-      </p>
+      </p>-->
     </div>
     <div class="row">
-      <p-chart height="400" [type]="chartType" [data]="basicData" [options]="basicOptions"></p-chart>
+      <p-chart
+        height="400"
+        [type]="chartType"
+        [data]="basicData"
+        [options]="basicOptions"
+      ></p-chart>
     </div>
   </div>
 </div>
