--- a/src/app/features/base/components/header/header.component.html
+++ b/src/app/features/base/components/header/header.component.html
@@ -7,7 +7,7 @@
           <span class="brand-name">TurnQuest</span>
       </a>
       <div class="profile">
-          <img src="../../../../../assets/assets/images/jane-doe.png" alt="john doe">
+          <img src="../../../../../assets/images/jane-doe.png" alt="john doe">
           <span>Jane Doe</span>
       </div>
 
