--- a/src/app/features/reports/create-report/create-report.component.css
+++ b/src/app/features/reports/create-report/create-report.component.css
@@ -67,6 +67,48 @@
   text-transform: capitalize;
 }
 
+.modal-content {
+  margin-top: 10vh;
+}
+
+#saveReportModal .left {
+  border-right: solid 1px #D0DAE3;
+}
+
+#saveReportModal ul {
+  margin-left: -30px;
+}
+
+#saveReportModal .active-folder {
+  background: #D0DAE3;
+}
+
+#saveReportModal .report-row {
+  margin: 10px 20px 20px;
+  height: 200px;
+  overflow-y: scroll;
+}
+
+#saveReportModal ul li, #saveReportModal .report-item {
+  list-style-type: none;
+  margin: 10px 0;
+  padding: 5px;
+  cursor: pointer;
+  color: gray;
+}
+
+#saveReportModal ul li:hover, #saveReportModal .report-item:hover {
+  background: #D0DAE3;
+}
+
+#saveReportModal li i, #saveReportModal .report-item i {
+  margin-right: 5px;
+  color: #00529b;
+}
+
+.criteria-preview {
+  text-align: right;
+}
 
 /*primeng style*/
 .container .row .p-dropdown .p-dropdown-label.p-placeholder,
