Added routing to new service provider

--- a/src/app/features/entities/components/service-provider/new-service-provider/new-service-provider.component.html
+++ b/src/app/features/entities/components/service-provider/new-service-provider/new-service-provider.component.html
@@ -1,1 +1,12 @@
-<p>new-service-provider works!</p>
+<div class="mx-4">
+    <div class="d-flex justify-content-between my-4 ms-4">
+        <div class="mr-auto p-2">
+          <h4 class="htxt page-header">Service Provider</h4>
+        </div>
+        <div class="me-4">
+          <app-dynamic-breadcrumb [breadCrumbItems]="serviceProviderBreadCrumbItems">
+          </app-dynamic-breadcrumb>
+        </div>
+      </div>
+
+</div>
