VQ-367: Ability to add previewed results to dashboard

--- a/src/app/features/reports/create-report/create-report.component.css
+++ b/src/app/features/reports/create-report/create-report.component.css
@@ -119,3 +119,10 @@
 :host ::ng-deep .p-dropdown span{
   font-size: 0.9em;
 }
+
+::ng-deep .p-datatable .p-datatable-tbody > tr > td,
+::ng-deep .p-datatable .p-datatable-thead > tr > th {
+  padding: 0.5em;
+  font-size: 0.9em;
+  color: #00529b!important;
+}
