--- a/src/app/features/base/components/sidebar/sidebar.component.html
+++ b/src/app/features/base/components/sidebar/sidebar.component.html
@@ -1,26 +1,26 @@
-<div class="base-side-nav">
-    <div class="flex-shrink-0 p-3 bg-white">
-        <ul class="list-unstyled ps-0">
-            <li class="mb-1">
+<div class="base-side-nav" style="margin: 0; padding: 0rem 0 0 0;">
+    <div class="flex-shrink-0 bg-white">
+        <ul style="list-style: none; margin: 0px; padding-left: 0px; ">
+            <li class="mb-1" >
                 <button class="btn btn-toggle align-items-center rounded collapsed" aria-expanded="true" routerLink="/home/dashboard">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
-                        <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146ZM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5Z"/>
-                    </svg>
+
                     <span class="menu-title">
+                      <i class="fa-solid fa-house" style="font-size: 22px; padding-right: 6px;"></i>
                         Home
                     </span>
                 </button>
+
             </li>
+
             <ng-container *ngFor="let item of sidebarMainMenuList; let i=index">
               <li class="mb-1">
-                <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" [attr.data-bs-target]="'#' + item.nameSlug" [attr.aria-expanded]="false">
-                  <span *ngIf="item.svgContent" [innerHTML]= "item.svgContent"></span>
+                <button (click)="clickURL(item?.link)" class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" [attr.data-bs-target]="'#' + item.nameSlug" [attr.aria-expanded]="false">
                   <span class="menu-title">
-                    {{ item.name }}
+                    <i class="{{item.icon}}" style="font-size: 22px; padding-right: 6px;"></i> {{ item.name }}
                   </span>
                 </button>
-                <div class="collapse" [id]="item.nameSlug">
-                  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <div  class="collapse" [id]="item.nameSlug">
+                  <ul *ngIf="item.menuItems?.length > 0" class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                     <li *ngFor="let menuItem of item.menuItems"><a (click)="clickURL(menuItem.link)" class="link-dark rounded">{{ menuItem.name }}</a></li>
                   </ul>
                 </div>
