--- a/src/app/shared/components/dynamic-table/dynamic-table.component.html
+++ b/src/app/shared/components/dynamic-table/dynamic-table.component.html
@@ -96,10 +96,10 @@
           {{ rowData[col.field] }}
         </td>
         <td *ngIf="tableDetails?.url"> <!-- Add a cell for the action column -->
-          <button type="button" class="btn btn-primary" style="font-size: 0.9em; padding: 7px 15px; border-radius: 4px;" [routerLink]="[tableDetails?.url, rowData[tableDetails.urlIdentifier]]">
-            view details
-            <!-- <i class="pi pi-id-card"></i> -->
-          </button>
+          <a  style="font-size: 0.9em; border-radius: 4px;" [routerLink]="[tableDetails?.url, rowData[tableDetails.urlIdentifier]]">
+
+            <i class="pi pi-eye" style="padding: 0 2px 0 0;"> </i>view
+          </a>
           <!-- Use routerLink with the input properties -->
         </td>
       </tr>
