update on VQ-583 | Dynamic Navigation.

--- a/src/app/features/base/components/sidebar/sidebar.component.css
+++ b/src/app/features/base/components/sidebar/sidebar.component.css
@@ -1,1 +1,34 @@
+.menu-title {
+  font-size: 12px;
+  text-transform: uppercase;
+}
+.base-side-nav > ul > li {
+  width: 217px;
+  border-bottom: solid 1px rgba(10, 31, 107, 0.148);
+  padding-top: 1.3rem;
+}
 
+
+
+.base-side-nav > ul > li:not(:nth-child(1)) {
+  border-right: solid 2px rgba(10, 31, 107, 0.148);;
+}
+
+.base-side-nav > ul > li > button:hover,
+.base-side-nav > ul > li > button:focus,
+.base-side-nav > ul > li > button:visited
+{
+  border: none;
+}
+
+.base-side-nav > ul > li > button:not(:hover),
+.base-side-nav > ul > li > button:not(:focus),
+.base-side-nav > ul > li > button:not(:visited)
+{
+  border: none;
+}
+
+.base-side-nav > ul > li:hover {
+  background-color: #00539b0e;
+
+}
