--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
@@ -80,10 +80,10 @@
               <div class="d-flex" id="chart">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                          <a class="nav-link" href="#"><i class="fa-solid fa-chart-simple" style="padding-right: 6px; font-size: 20px;"></i>New Chart</a>
+                          <a class="nav-link" routerLink="./reports"><i class="fa-solid fa-chart-simple" style="padding-right: 6px; font-size: 20px;"></i>New Chart</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="#"><i class="fa-solid fa-chart-pie" style="padding-right: 6px; font-size: 20px;"></i>Analytics</a>
+                          <a class="nav-link" routerLink="./reports"><i class="fa-solid fa-chart-pie" style="padding-right: 6px; font-size: 20px;"></i>Analytics</a>
                       </li>
                   </ul>
               </div>
