--- a/src/app/features/base/components/dashboard/dashboard.component.html
+++ b/src/app/features/base/components/dashboard/dashboard.component.html
@@ -55,106 +55,9 @@
           </div>
       </div>
 
+      <!--calendar-->
       <div class="col-sm-8">
-          <div class="card calendar">
-              <div class="card-header">
-                  <div class="row">
-                      <div class="col-sm-2 offset-sm-3">
-                          <select class="form-select" aria-label="Default select example">
-                              <option selected>Day</option>
-                              <option value="1">One</option>
-                              <option value="2">Two</option>
-                              <option value="3">Three</option>
-                          </select>
-                      </div>
-                      <div class="col-sm-2">
-                          <select class="form-select" aria-label="Default select example">
-                              <option selected>May</option>
-                              <option value="1">One</option>
-                              <option value="2">Two</option>
-                              <option value="3">Three</option>
-                          </select>
-                      </div>
-                      <div class="col-sm-2">
-                          <select class="form-select" aria-label="Default select example">
-                              <option selected>2023</option>
-                              <option value="1">One</option>
-                              <option value="2">Two</option>
-                              <option value="3">Three</option>
-                          </select>
-                      </div>
-                  </div>
-              </div>
-              <div class="card-body">
-                  <form>
-                      <div class="row">
-                          <div class="col-sm-4">
-                              <div class="row">
-                                  <div class="col-sm-12 mb-2">
-                                      <span
-                                          style="padding: 8px;
-                                          border-radius: 100%;
-                                          background: #00529B; color: #fff; margin-right: 10px"
-                                      >24
-                                      </span> July, Saturday
-                                  </div>
-                              </div>
-                              <div class="row">
-                                  <div class="col-sm-12">
-                                      <div class="mb-3">
-                                          <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                                          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
-                                      </div>
-                                      <div class="mb-3">
-                                          <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                                          <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
-                                      </div>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="col-sm-8">
-                              <div class="row">
-                                  <div class="col-sm-12">
-                                      <label for="exampleFormControlInput1" class="form-label">Title Subject</label>
-                                      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
-                                  </div>
-                                  <div class="col-sm-6">
-                                      <div class="row">
-                                          <div class="col-sm-12">
-                                              <label for="exampleFormControlInput1" class="form-label">Location</label>
-                                              <input type="email" class="form-control" id="exampleFormControlInput1">
-                                          </div>
-                                          <div class="col-sm-6">
-                                              <label for="exampleFormControlInput1" class="form-label">Time From</label>
-                                              <input type="email" class="form-control" id="exampleFormControlInput1">
-                                          </div>
-                                          <div class="col-sm-6">
-                                              <label for="exampleFormControlInput1" class="form-label">Time To</label>
-                                              <input type="email" class="form-control" id="exampleFormControlInput1">
-                                          </div>
-                                          <div class="col-sm-12">
-                                              <label for="exampleFormControlInput1" class="form-label">Status</label>
-                                              <input type="email" class="form-control" id="exampleFormControlInput1">
-                                          </div>
-                                      </div>
-                                  </div>
-
-                                  <div class="col-sm-6">
-                                      <label for="exampleFormControlTextarea1" class="form-label">Description Details</label>
-                                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="7"></textarea>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="col-sm-2">
-                              <button class="btn btn-link text-primary">Back</button>
-                          </div>
-                          <div class="col-sm-2 offset-sm-8 text-end">
-                              <button class="btn btn-link text-primary">Save</button>
-                          </div>
-                      </div>
-                  </form>
-              </div>
-          </div>
+        <app-calendar></app-calendar>
       </div>
   </div>
 </div>
