update on VQ-583 | Dynamic Navigation.

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -47,7 +47,7 @@
       <div class="mb-3">
         <button type="submit"
                 id="login-submit"
-                class="btn btn-primary btn-full-width"
+                class="btn btn-primary btn-full-width fadeIn"
                 (click)='authAttempt()'
                 i18n='Login|Auth Login Action@@authLoginActionBtn'>
           Login
