--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.css
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.css
@@ -13,3 +13,50 @@
   font-weight: bold;
   text-decoration: underline;
 }
+
+.nav-item > .nav-link:hover {
+  /* border-bottom: 0.5px solid #00539b1c; */
+  background-color: #00539b0a;
+}
+
+.dropdown-menu {
+  border-radius: 0;
+  font-size: 13px;
+}
+
+.dropdown-item:hover {
+  background-color: #00539b0c;
+  font-weight: 600;
+  border-right: #00529B solid 1px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
